fix google dropdown on mobile

--- a/mobile-assets/css/edit.css
+++ b/mobile-assets/css/edit.css
@@ -24,9 +24,6 @@
     .modal {
         width: 90%;
     }
-    .pac-container {
-        top: 24em !important;
-    }
     .login-modal {
         width: 90%;
     }
